added css folder and changed code accordingly

--- a/css/Test.css
+++ b/css/Test.css
@@ -1,7 +1,7 @@
 header {
   background-color: transparent;
   text-align: center;
-  background-image: url("images/work.jpg");
+  background-image: url("../images/work.jpg");
   color: white;
   background-size: cover;
 }
